Move previous button to left

--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
 
   <body>
     <div class='row justify-content-md-center'>
-
-      <div class="col col-lg-2 previousButton">
-        <button type="button" id="prevBtn" onclick="nextPrev(-1)">
-          Previous
-        </button>
+      <div class="col col-lg-2 previousButton justify-content-end">
+        <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
       </div>
 
       <div class="col-md-auto form">
@@ -83,9 +80,7 @@
       </div>
 
       <div class="col col-lg-2 nextButton">
-        <button type="button" id="nextBtn" onclick="nextPrev(1)">
-          <span>Next</span>
-        </button>
+        <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
       </div>
     </div>
 
